--- a/docs/stories/1.4.data-normalization-utility.md
+++ b/docs/stories/1.4.data-normalization-utility.md
@@ -1,7 +1,7 @@
 # Story 1.4: Data Normalization Utility
 
 ## Status
-Draft
+Ready
 
 ## Story
 **As a** developer,
@@ -42,7 +42,7 @@ Draft
   - [ ] Support API JSON responses (Smarty, Uswitch format)
   - [ ] Create type definitions for input formats
 - [ ] Write unit tests (AC: 4)
-  - [ ] Create `tests/unit/scraping/normalize.test.ts`
+  - [ ] Create `src/lib/scraping/__tests__/normalize.test.ts`
   - [ ] Test data allowance normalization variations
   - [ ] Test price normalization variations
   - [ ] Test all input format types
@@ -61,8 +61,8 @@ Draft
 
 ### Source Tree
 - Normalization utility: `src/lib/scraping/normalize.ts`
-- Type definitions: `src/types/plan.ts` (to be created)
-- Test file: `tests/unit/scraping/normalize.test.ts`
+- Type definitions: Co-located with utility or `src/types/plan.ts` if needed
+- Test file: `src/lib/scraping/__tests__/normalize.test.ts` (co-located)
 
 ### Technical Stack
 - TypeScript for type safety
@@ -70,8 +70,8 @@ Draft
 - Support for multiple input formats
 
 ### Testing
-- Test file location: `tests/unit/scraping/normalize.test.ts`
-- Test framework: Jest
+- Test file location: `src/lib/scraping/__tests__/normalize.test.ts`
+- Test framework: Vitest (aligned with Stories 1.2, 1.3)
 - Coverage target: 60%+ for critical business logic
 - Test all format variations and edge cases
 
