--- a/docs/stories/2.2.data-collectors-telcos.md
+++ b/docs/stories/2.2.data-collectors-telcos.md
@@ -21,7 +21,7 @@ Draft
    - Browser selection (webkit vs chromium based on compatibility)
 4. Collected data passes through normalization utility before storage
 5. Each collector handles source-specific edge cases and layout variations
-6. Retry logic and error handling implemented per collector
+6. Error handling implemented per collector (fail fast with logging - no retry logic)
 7. All collectors write data to `plans` table with proper metadata
 8. Unit tests for each collector (mocked page content or API responses)
 9. `npm run scrape:telcos` command runs all 7 telco collectors sequentially
@@ -54,10 +54,9 @@ Draft
   - [ ] Handle missing data gracefully
   - [ ] Document edge cases per source
 - [ ] Implement error handling (AC: 6)
-  - [ ] Add retry logic to each collector
   - [ ] Handle timeout errors
   - [ ] Handle element not found errors
-  - [ ] Add error logging
+  - [ ] Add error logging (fail fast approach)
 - [ ] Store data in database (AC: 7)
   - [ ] Write collected data to `plans` table
   - [ ] Include proper metadata (source, scrape_timestamp, plan_id)
